# buddy-ai

./: .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  docs-requirements.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  docs.yml  publish-pypi.yml  tests.yml
advanced/competency/: index.html
advanced/evaluation/: index.html
advanced/multimodal/: index.html
advanced/planning/: index.html
advanced/prompt-caching/: index.html
advanced/pulse/: index.html
advanced/reasoning/: index.html
advanced/security/: index.html
advanced/token-efficiency/: index.html
agents/agent-class/: index.html
agents/configuration/: index.html
agents/evolution/: index.html
agents/lifecycle/: index.html
agents/metrics/: index.html
agents/personality/: index.html
api/agent-api/: index.html
api/knowledge-api/: index.html
api/overview/: index.html
api/team-api/: index.html
api/workflow-api/: index.html
articles/: index.html
articles/competency-engine-v2.2.0/: index.html
articles/pulse-virtual-employee/: index.html
buddy/: .gitignore  __init__.py  constants.py  debug.py  exceptions.py  media.py
buddy/agent/: __init__.py  agent.py  evolution.py  metrics.py  personality.py
buddy/api/: agent.py  api.py  app.py  evals.py  playground.py  team.py  user.py  workflows.py  workspace.py
buddy/app/: base.py  utils.py
buddy/cli/: auth_server.py  config.py  console.py  credentials.py  entrypoint.py  operator.py  pulse_cli.py  settings.py  simple_train_cli.py  train_cli.py
buddy/document/: __init__.py  base.py
buddy/embedder/: __init__.py  aws_bedrock.py  azure_openai.py  cohere.py  fastembed.py  fireworks.py  google.py  huggingface.py  jina.py  langdb.py  mistral.py  nebius.py  ollama.py  openai.py  sentence_transformer.py  together.py  voyageai.py
buddy/eval/: accuracy.py  competency.py  competency_runtime.py  performance.py  reliability.py  utils.py
buddy/file/: __init__.py  file.py
buddy/infra/: app.py  base.py  context.py  db_app.py  resource.py  resources.py
buddy/integrations/: __init__.py  _utils.py
buddy/knowledge/: __init__.py  agent.py  arxiv.py  combined.py  csv.py  csv_url.py  document.py  docx.py  firecrawl.py  irag.py  json.py  langchain.py  light_rag.py  llamaindex.py  markdown.py  pdf.py  pdf_bytes.py  pdf_url.py  text.py  url.py  website.py  wikipedia.py  youtube.py
buddy/memory/: __init__.py  agent.py  classifier.py  manager.py  summarizer.py  team.py  workflow.py
buddy/models/: __init__.py  base.py  cache.py  message.py  response.py  token_budget.py
buddy/multimodal/: __init__.py  multimodal_agent.py
buddy/planning/: __init__.py  planner.py
buddy/playground/: __init__.py  deploy.py  playground.py  serve.py  settings.py
buddy/pulse/: __init__.py  app.py  comms.py  employee.py  feedback.py  identity.py  kt.py  meeting.py  memory.py  onboarding.py  router.py  work.py
buddy/reasoning/: __init__.py  advanced_reasoning.py  azure_ai_foundry.py  deepseek.py  default.py  groq.py  helpers.py  ollama.py  openai.py
buddy/reranker/: base.py  cohere.py  infinity.py  sentence_transformer.py
buddy/run/: base.py  messages.py  response.py  team.py  workflow.py
buddy/security/: __init__.py  adversarial_protection.py
buddy/storage/: base.py  dynamodb.py  firestore.py  gcs_json.py  in_memory.py  json.py  mongodb.py  mysql.py  postgres.py  redis.py  singlestore.py  sqlite.py  yaml.py
buddy/team/: __init__.py  team.py
buddy/tools/: __init__.py  api.py  aws_lambda.py  aws_tools.py  bitbucket.py  browserbase.py  calculator.py  cartesia.py  code_migration_tool.py  confluence.py  csv_toolkit.py  dalle.py  decorator.py  desi_vocal.py  docker.py  e2b.py  elasticsearch_tool.py  eleven_labs.py  email.py  enhanced_cat_tool.py  evm.py  facebook.py  file.py  (+62 more)
buddy_ai.egg-info/: PKG-INFO
docs/: README.md  index.md
examples/: 01_basic_agent.py  02_agent_with_tools.py  03_agent_with_memory.py  04_multi_agent_team.py  05_rag_with_irag.py  06_planning_agent.py  07_fastapi_deployment.py  08_multi_model_comparison.py  09_streaming_agent.py  10_custom_tool.py  11_pulse_employee.py  12_competency_engine.py  13_langchain_langgraph.py  README.py
pulse-desktop/: README.md  package-lock.json  package.json
pulse-ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: ci_diagnose_tests.py  ci_smoke_test.sh  ci_verify_imports.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
(+496 files in other folders)
