[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-ai"
version = "2.2.1"
description = "A comprehensive Python framework for building and deploying AI agents with multi-model support and advanced capabilities"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sriram Sangeeth Mantha", email = "sriram.sangeet@gmail.com"}
]
maintainers = [
    {name = "Sriram Sangeeth Mantha", email = "sriram.sangeet@gmail.com"}
]
keywords = [
    "ai", "agents", "llm", "chatbot", "artificial-intelligence", 
    "machine-learning", "nlp", "openai", "anthropic", "rag",
    "multi-agent", "workflow", "automation", "ai-framework",
    "conversational-ai", "intelligent-agents", "ai-assistant"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Environment :: Console",
    "Environment :: Web Environment",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.6",
    "starlette>=0.27.0",
    "docstring-parser>=0.15",
    "packaging>=23.0",
    "chardet>=5.0.0",
    "openai>=1.0.0",
    "streamlit>=1.28.0",
    # Streamlined iRAG dependencies - efficient NLP ontology mapping
    "spacy>=3.4.0",
    "numpy>=1.21.0", 
    "scikit-learn>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
google = ["google-generativeai>=0.3.0"]
cohere = ["cohere>=4.0.0"]
aws = ["boto3>=1.34.0"]
azure = ["openai>=1.0.0"]
irag = [
    "spacy>=3.4.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
]
training = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
]
multimodal = [
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
tools = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "boto3>=1.34.0",
    "slack-sdk>=3.26.0",
    "google-api-python-client>=2.108.0",
    "tavily-python>=0.3.0",
]
langchain = [
    "langchain-core>=0.3.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.3.0",
    "cohere>=4.0.0",
    "boto3>=1.34.0",
    "spacy>=3.4.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/esasrir91/buddy-ai"
Documentation = "https://github.com/esasrir91/buddy-ai#readme"
Repository = "https://github.com/esasrir91/buddy-ai"
"Bug Reports" = "https://github.com/esasrir91/buddy-ai/issues"
"Discussions" = "https://github.com/esasrir91/buddy-ai/discussions"
"Release Notes" = "https://github.com/esasrir91/buddy-ai/releases"

[project.scripts]
buddy = "buddy.cli.entrypoint:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["buddy*"]

[tool.setuptools.package-data]
buddy = ["py.typed", "pulse/ui/**/*", "workspace/templates/**/*", "workspace/templates/**/.env*"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
